# domino-counter

./: .gitignore  Cargo.toml  README.md  detr_demo.ipynb  dominoes-info.csv  opencv.py  opencv_version.ipynb  test_opencv.ipynb
dominoes/: 10-5.jpg~  12-10.jpg-autosave.kra  5_test.jpg~  IMG-20210311-WA0002.jpg-autosave.kra  IMG-20210324-WA0002.jpg~  domino-model.ipynb  project-1-at-2021-05-02-21-51-911bca53.json
dominoes/data/: dominos-labels.json
dominoes/eval/: 0-0.jpg~  10-12.jpg-autosave.kra
model_building/: Cargo.toml  domino-model.ipynb  domino-model_image-transformer.ipynb  labels_dict.json
model_building/data/test/: 12.jpg-autosave.kra
model_building/src/: main.rs
src/: lib.rs  log.rs  main.rs  ml.rs
src/guess/: guess.rs
src/training/: lib.rs  mod.rs
