[package]
authors = ["Jeremy <jere.arde@gmail.com>"]
edition = "2018"
name = "domino-counter"
version = "0.2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
image = "0.23.14"
imageproc = "0.22.0"
wasm-bindgen = "0.2.72"
